[tool.poetry]
name = "hello-starknet"
version = "0.1.0"
description = ""
authors = ["Philipp Muens <philipp@muens.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ecdsa = "^0.17.0"
fastecdsa = "^2.2.3"
sympy = "^1.10.1"
cairo-lang = "^0.9.0"
starknet-devnet = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
